<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context="cu.inmobile.wara.MainActivity">


    <ImageView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logo_white_shadow" />

    <LinearLayout
        android:id="@+id/ll_action_buttons"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <cu.inmobile.wara.Utils.RalenwayTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/text_login_explication_main"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            style="@style/TextbuttonStyle"
            android:background="@drawable/rounded_corner_btn_white"
            android:text="@string/btn_registration"/>

        <cu.inmobile.wara.Utils.RalenwayTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/text_register_explication_main"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            style="@style/TextbuttonStyle"
            android:background="@drawable/rounded_corner_btn_white"
            android:text="@string/btn_login"/>

        <ImageButton
            android:id="@+id/btn_fb_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:background="@null"
            android:src="@drawable/facebook_login_blue"
            android:text="fb_signin"
            android:visibility="gone"/>


    </LinearLayout>



</RelativeLayout>
